# RESx

./: .gitignore  HOWTO.md  README.html  README.md  REScleaner.py  TODO.md  VDT_EXPLORE.py  VDT_TO_GRAPH.py  gshow  makefile  pyproject.toml  readers.py  vdt2xml
OLD_STUFF/: gshow
VDT/: large.vdt  tiamvdt.csv
configs/: CONF0.cnfx
resx/: REScleaner.py  console.py  vdt2xml
