[tool.poetry]
name = "resx"
version = "0.4.1"
description = ""
authors = ["jpm <jean-paul.marmorat@minesparis.psl.eu>"]
readme = "README.md"

[tool.poetry.scripts]
resx  = "resx .console:cli"

[tool.poetry.dependencies]
python = "^3.9"
pandas = ">=1.5.3"
click = "^8.1.3"
tqdm = "^4.65.0"
rich = "^13.3.4"
jinja2 = "^3.1.3"

[tool.poetry.group.dev.dependencies]
ipython = "^8.12.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
