[tool.poetry]
name = "resx"
version = "0.0.4"
description = "RES Explorer: VDT files postprocessing"
authors = [
"Lucas Desport <lucas.desport@minesparis.psl.eu>",
"Damien Corral <damien.corral@minesparis.psl.eu>",
"Jean-Paul Marmorat <jean-paul.marmorat@minesparis.psl.eu>",
]
readme = "README.md"

[tool.poetry.scripts]
resx  = "resx .console:cli"

[tool.poetry.dependencies]
python = "^3.10"
pandas = ">=1.5.3"
click = "^8.1.3"
networkx = "^3.3"
gravis = "^0.1.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
